更新留言板

--- a/PersonalWeb/static/css/style.css
+++ b/PersonalWeb/static/css/style.css
@@ -173,12 +173,12 @@ body {
 }
 
 .message{
-  margin-top: 55px;
-
+  margin-top: 45px;
+  
 }
 
 .message .btn{
-  width: 100px;
+  width: 105px;
   height: 50px;
   font-weight: bold;
   font-family: "Microsoft YaHei";
@@ -186,17 +186,22 @@ body {
 }
 
 .message input{
-  width: 250px;
-  height: 55px;
+  border: 3px solid #9a9a9a;
+  background-color: silver;
+  color: black;
+  width: 35%;
+  height: 60px;
 }
 
 .message textarea{
-  width: 100%;
+  border: 3px solid #9a9a9a;
+  background-color: silver;
+  width: 90%;
   height: 250px;
 }
 
 .message label{
-  font-size: 30px;
+  font-size: 25px;
   font-weight: bold;
   font-family: "Microsoft YaHei";
 }
@@ -218,15 +223,27 @@ body {
 
 .mylist{
   background-color: #404040;
-  margin: 5px auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1px;
+  margin-top: 5px;  
   width: 60%;
-
 }
+.mylist:hover{
+  background-color: #404040;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 2px;
+  margin-top: 10px;  
+  width: 60%;
+}
+
+
 
 .name{
   font-size: 25px;
   font-weight: bold;
-  height: 100px;
+  /* height: 100px; */
 }
 
 .total{
@@ -236,3 +253,53 @@ body {
 
 }
 
+.mess{
+  position: relative;
+  top: -7px;
+  font-weight: bold;
+  font-family: "Microsoft YaHei";
+  font-size: 40px;
+  padding: 0px;
+}
+
+.right{
+
+  color: black;
+  padding-bottom: 30px;
+  /* border-radius: 3rem 0 0 3rem; */
+  /* box-shadow: 12px 12px 12px ; */
+}
+
+.left{
+  background-color: black;
+  border-radius: 3rem;
+  border: 2px solid silver;
+  padding-top: 0px;
+  padding-bottom: 30px;
+  padding-left: 90px;  
+}
+
+.word{
+  background-color: #404040;
+  width: 60%;
+  margin-top: 0px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family:"Microsoft YaHei" ;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 20px;
+}
+
+.word:hover{
+  background-color: #404040;
+  width: 60%;
+  margin-top: 0px;
+  margin-bottom: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  font-family:"Microsoft YaHei" ;
+  font-size: 25px;
+  font-weight: bold;
+  padding: 20px;
+}
