--- a/PersonalWeb/templates/message.html
+++ b/PersonalWeb/templates/message.html
@@ -40,7 +40,11 @@
                 <span class="mb-1 name">
                     {{message.name}}<small class="text-muted"> #{{ loop.revindex }}</small>
                 </span > 
-                <span class="mb-1 name"> {{ moment(message.timestamp).fromNow(refresh=True) }}</span>
+                <span class="mb-1 name" data-toggle='tooltip' data-placeent="top"
+                      data-timestamp="{{ message.timestamp.strftime('%Y-%m-%dT%H:%M:%SZ') }}"
+                      data-delay="500"> 
+                    {{ moment(message.timestamp).fromNow(refresh=True) }}
+                </span>
             </div>   
         </a>
         <p class ="mb-1 text-left word">{{ message.body }}</p>
