--- a/PersonalWeb/templates/index.html
+++ b/PersonalWeb/templates/index.html
@@ -16,7 +16,7 @@
 
 <div class="row featurette education">
     <div class="col-md-7" >
-      <h1 class="featurette-heading text-left display-3 school">中央大學數學系<span class="text-muted date">2004 - 2008</span></h1>
+      <h1 class="featurette-heading text-left display-4 school">中央大學數學系<span class="text-muted date">2004 - 2008</span></h1>
       <p class="lead text-left cont">
       GPA: 82.83/100｡ Ranking: 9/86｡ 一次書卷獎｡ 在微積分､ 線性代數､ 高等微積分､ 實分析､ 數理統計､ 應用統計等科目皆取得相當不錯的成績｡  
       </p>     
@@ -31,7 +31,7 @@
 
 <div class="row featurette education">
   <div class="col-md-7 order-md-2">
-    <h1 class="featurette-heading text-left display-3 school">台灣大學數學所<span class="text-muted date">2008 - 2010</span></h1>
+    <h1 class="featurette-heading text-left display-4 school">台灣大學數學所<span class="text-muted date">2008 - 2010</span></h1>
     <p class="lead text-left cont">
     GPA: 90.65/100｡ Ranking: 6/46｡ 與中研院統計所的老師做資料分析的研究｡ 主要是了解大樣本演算法的理論基礎再進行優化跟推廣, 期間使用的是 R 語言｡ 
     </p>
@@ -46,7 +46,7 @@
 
 <div class="row featurette">
   <div class="col-md-7">
-    <h1 class="featurette-heading text-left display-3 school">緯育資料分析師培訓進修班<span class="text-muted date">Jan 2021- Jul 2021</span></h1>
+    <h1 class="featurette-heading text-left display-4 school">緯育資料分析師培訓進修班<span class="text-muted date">Jan 2021- Jul 2021</span></h1>
     <p class="lead text-left cont">
       python 的基本操作｡ 爬蟲､ 資料清洗､ 資料整理､ 資料視覺化｡ 機器學習與深度學習｡ MySQL､ Linux､ flask､ hadoop､ spark､ kafka､ powerBI､ Git､ Docker｡   
     </p>     
@@ -63,7 +63,7 @@
 
 <div class="row featurette education">
   <div class="col-md-7">
-    <h1 class="featurette-heading text-left display-3 school">中央研究院統計所, 研究助理<span class="text-muted date">2009 - 2010</span></h1>
+    <h1 class="featurette-heading text-left display-4 school">中央研究院統計所, 研究助理<span class="text-muted date">2009 - 2010</span></h1>
     <p class="lead text-left cont">
       參與資料分析相關的專案研究｡ 接觸大量的文獻, 每周一次跟指導老師的面對面會談｡ 使用 R 語言｡ 在 27 屆南區統計研討會分享我們的成果｡ 
     </p>     
@@ -78,7 +78,7 @@
 
 <div class="row featurette education">
 <div class="col-md-7 order-md-2">
-  <h1 class="featurette-heading text-left display-3 school">逢甲大學應用數學系, 教學助理<span class="text-muted date">2012 - 2018</span></h1>
+  <h1 class="featurette-heading text-left display-4 school">逢甲大學數學系, 教學助理<span class="text-muted date">2012 - 2018</span></h1>
   <p class="lead text-left cont">
     擔任每年大一新鮮人的實習老師, 每學期教授八個科系的數學統計相關實習課程, 課程涵蓋微積分､ 高等微積分､ Matlab操作等等｡
   </p>
@@ -93,7 +93,7 @@
 
 <div class="row featurette">
 <div class="col-md-7">
-  <h1 class="featurette-heading text-left display-3 school">私人家教班, 家教老師<span class="text-muted date">2014 - 2020</span></h1>
+  <h1 class="featurette-heading text-left display-4 school">私人家教班, 家教老師<span class="text-muted date">2014 - 2020</span></h1>
   <p class="lead text-left cont">
     有 50 位私人家教的經驗｡ 自編教學講義, 教授的範圍涵蓋國高中數學教材與大學數學相關的課程｡
   </p>     
