--- a/PersonalWeb/templates/base.html
+++ b/PersonalWeb/templates/base.html
@@ -29,7 +29,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
         <div class="inner">
-            <h3 class="masthead-brand display-4">{% block name %}<span class="matt">Matt</span>{% endblock%}</h3>
+            <h3 class="masthead-brand display-4 matt">Matt</h3>
             <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="{{ url_for('index') }}">首頁</a>
             <a class="nav-link" href="/#education">學歷</a>
