--- a/PersonalWeb/templates/index.html
+++ b/PersonalWeb/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block main %}
 <div class="about">
-<h1 class="cover-heading display-3 step" >轉職的道路沒有捷徑, 唯有樂觀進取, 一步一腳印｡</h1>
+<h1 class="cover-heading display-3 cont" >轉職的道路沒有捷徑, 唯有樂觀進取, 一步一腳印｡</h1>
 <p class="lead cont">
   我是張家豪,有接近十年的教學經驗｡ 近年開始自學與進修, 人生的下半場以資料分析師跟後端工程師為目標,
   您的寶貴經驗與意見會是我最大的動力, 歡迎留言給我｡
@@ -12,7 +12,7 @@
 </div>
 
 <div id="education"></div>
-<center><div class="divider "></div></center>
+<center><div class="divider"></div></center>
 
 <div class="row featurette education">
     <div class="col-md-7" >
