--- a/PersonalWeb/templates/index.html
+++ b/PersonalWeb/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
+<div class="outer">
 <div class="about">
 <h1 class="cover-heading display-3 cont" >轉職的道路沒有捷徑, 唯有樂觀進取, 一步一腳印｡</h1>
 <p class="lead cont">
@@ -9,6 +10,7 @@
 <p class="lead">
     <a href="{{ url_for('message') }}" class="btn btn-lg btn-danger">留言板</a>
 </p>
+</div>
 </div>
 
 <div id="education"></div>
