--- a/PersonalWeb/templates/errors/500.html
+++ b/PersonalWeb/templates/errors/500.html
@@ -5,14 +5,15 @@
 {% block main %}
 <div class="row">
     <div class="col-md-4 "></div>
-    <div class="col-md-4 error text-left">
+    <div class="col-md-4 text-left error">
         非常抱歉
-        <div style="font-size: 15px;">
+        <div class="wrong">
         有些地方出錯了<br>
         We're sorry, something went wrong.
         </div>
     </div>
     <div class="col-md-4"></div>
 </div>
+
 <center ><div class="divider1"></div></center>
 {% endblock %}
