--- a/PersonalWeb/templates/base.html
+++ b/PersonalWeb/templates/base.html
@@ -26,18 +26,25 @@
     </style>
 </head>
 
+
 <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
         <div class="inner">
             <h3 class="masthead-brand display-4 matt">Matt</h3>
             <nav class="nav nav-masthead justify-content-center">
-            <a class="nav-link active" href="{{ url_for('index') }}">首頁</a>
-            <a class="nav-link" href="/#education">學歷</a>
+            <a {% if request.endpoint == 'index' %} class= "nav-link active" {% else %}  class= "nav-link" {% endif %} href="{{ url_for('index') }}">首頁</a>
+            <a class="nav-link" href="/#education">學歷</a>  
             <a class="nav-link" href="/#experience">經歷</a>
+            <a {% if request.endpoint == 'story' %} class= "nav-link active" {% else %}  class= "nav-link" {% endif %} href="{{ url_for('story')}}">動態</a>
+            {% if current_user.is_authenticated %}
+              <a class="login btn btn-lg btn-danger" href="{{ url_for('logout')}}">登出</a>
+            {% else %}
+              <a class="login btn btn-lg btn-danger" href="{{ url_for('login')}}">登入</a>
+            {% endif %}
             </nav>
         </div>
-        </header>
+        </header>  
 
         <main role="main" class="inner cover">
         {% block main %}
