--- a/PersonalWeb/templates/index.html
+++ b/PersonalWeb/templates/index.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% block main %}
+{% for message in get_flashed_messages() %}
+<div class="alert alert-info flash">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{ message }}
+</div>
+{% endfor %}
+
 <div class="outer">
 <div class="about">
 <h1 class="cover-heading display-3 cont" >轉職的道路沒有捷徑, 唯有樂觀進取, 一步一腳印｡</h1>
