--- a/PersonalWeb/templates/story.html
+++ b/PersonalWeb/templates/story.html
@@ -1,72 +1,59 @@
 {% extends 'base.html' %}
+{% from 'bootstrap/form.html' import render_form %}
+
+{% block title %}專題進展與最新動態{% endblock  %}
 
 {% block main %}
+
+{% for message in get_flashed_messages() %}
+<div class="alert alert-info flash">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    {{ message }}
+</div>
+{% endfor %}
 
 <section class="content-section" id="portfolio">
     <div class="container px-4 px-lg-5">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0 cont">持續更新中</h3>
             <h2 class="mb-5 cont">專案進展與最新動態</h2>
+            {% if current_user.is_authenticated %}
+            <div class="row">
+                <div class="col-md-2"></div>
+                <div class="col-md-8 text-left mb-5 center1">
+                    {{ render_form(form, button_map = {'submit':'danger'}, extra_classes = 'post') }}
+                </div>
+                <div class="col-md-2"></div>
+            </div>
+            {% endif %}
         </div>
         <div class="row gx-0">
+            {% for story in stories %}
             <div class="col-lg-6">
                     <div class="caption">
                         <div class="caption-content">
-                            <div class="h2 mt-3 cont">個人網頁</div>
-                            <p class="mb-1 cont">個人獨立小型專案, 支持留言板與登入系統, 進行中｡</p>
+                            <div class="h2 mt-3 cont">{{ story.title }}
+                                {% if current_user.is_authenticated %}
+                                <a class="btn btn-info btn-md" href="{{ url_for('edit_story', story_id=story.id) }}">編輯</a>
+                                <form class="inline" method="post" action="{{ url_for('delete_story', story_id=story.id)}}">
+                                    <input type="hidden" name='csrf_token' value="{{ csrf_token() }}">
+                                    <button type="submit" class="btn btn-warning btn-md" onclick="return confirm('你確定嗎?')">刪除</button>
+                                </form>
+                                {% endif %}
+                            </div> 
+                            <p class="mb-1 cont">{{ story.body }}</p>
                         </div>
                     </div>
-                <a class="portfolio-item" href="https://github.com/r97221004/SideProject01-PersonalWeb">
-                    <img class="img-fluid" src="../static/portfolio-1.jpg" alt="..." />
+                <a class="portfolio-item" href="{{ story.site }}">
+                    <img class="img-fluid" src="../static/portfolio-{{ loop.index % 8 }}.jpg" alt="..." />
                 </a>
             </div>
-            <div class="col-lg-6">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <div class="h2 mt-3 cont">個人部落格</div>
-                            <p class="mb-1 cont">個人獨立小型專案, 支持前台後台登入系統, 準備中｡</p>
-                        </div>
-                    </div>
-                <a class="portfolio-item" href="#!">
-                    <img class="img-fluid" src="../static/portfolio-2.jpg" alt="..." />
-                </a>
-            </div>
-            <div class="col-lg-6">              
-                    <div class="caption">
-                        <div class="caption-content">
-                            <div class="h2 mt-3 cont">LeetCode刷題記錄</div>
-                            <p class="mb-1 cont">使用 Python 與 MySQL 的刷題記錄, 持續中｡</p>
-                        </div>
-                    </div>
-                <a class="portfolio-item" href="#!">
-                    <img class="img-fluid" src="../static/portfolio-3.jpg" alt="..." />
-                </a>
-            </div>
-            <div class="col-lg-6">
-                    <div class="caption">
-                        <div class="caption-content">
-                            <div class="h2 mt-3 cont">資料分析</div>
-                            <p class="mb-1 cont">使用 pandas 與 NumPy 等套件進行資料分析, 持續中｡</p>
-                        </div>
-                    </div>
-                <a class="portfolio-item" href="#!">
-                    <img class="img-fluid" src="../static/portfolio-4.jpg" alt="..." />
-                </a>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
 
 
 <center ><div class="divider1"></div></center>
-
-
-
-
-
-
-
-
-
 
 {% endblock %}
