--- a/PersonalWeb/templates/base.html
+++ b/PersonalWeb/templates/base.html
@@ -38,9 +38,9 @@
             <a class="nav-link" href="/#experience">經歷</a>
             <a {% if request.endpoint == 'story' %} class= "nav-link active" {% else %}  class= "nav-link" {% endif %} href="{{ url_for('story')}}">動態</a>
             {% if current_user.is_authenticated %}
-              <a class="login btn btn-lg btn-danger" href="{{ url_for('logout')}}">登出</a>
+              <a class="btn btn-lg btn-danger login " href="{{ url_for('logout')}}">登出</a>
             {% else %}
-              <a class="login btn btn-lg btn-danger" href="{{ url_for('login')}}">登入</a>
+              <a class="btn btn-lg btn-danger login" href="{{ url_for('login')}}">登入</a>
             {% endif %}
             </nav>
         </div>
