更新程式碼

--- a/PersonalWeb/templates/edit_story.html
+++ b/PersonalWeb/templates/edit_story.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% from 'bootstrap/form.html' import render_form %}
 
-{% block title %}新增最新動態{% endblock  %}
+{% block title %}編輯最新動態{% endblock  %}
 
 {% block main %}
 
