--- a/PersonalWeb/templates/base.html
+++ b/PersonalWeb/templates/base.html
@@ -58,7 +58,9 @@
           <footer class="row row-cols-5 py-5 my-5 ">
             <div class="col">
               <a href="/" class="d-flex align-items-center mb-3 link-dark text-decoration-none">
-                <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"/></svg>
+                <svg class="bi me-2" width="50" height="50"><use xlink:href="#bootstrap"/>
+                  <image xlink:href="{{ url_for('static', filename='Matt.png') }}" width="100%" height="100%"/> 
+                </svg>
               </a>
               <p class="text-muted">&copy; 2021</p>
             </div>
